--- a/.gitignore
+++ b/.gitignore
@@ -45,7 +45,8 @@ $RECYCLE.BIN/
 Network Trash Folder
 Temporary Items
 .apdisk
-.vscode/
 *.pyc
 *.log
 *.swp
+HangarBuddy.egg-info/*
+.vscode/settings.json
